--- a/RDX.SW/styles.css
+++ b/RDX.SW/styles.css
@@ -119,6 +119,12 @@ body {
 }
 @media (min-width: 768px) {
   .page-body .control-carousel .carousel-slideContainer .template-contentCard .hero-img img {
+    width: 100%;
+    height: auto;
+  }
+}
+@media (min-width: 1700px) {
+  .page-body .control-carousel .carousel-slideContainer .template-contentCard .hero-img img {
     width: auto;
     height: 80vh;
   }
@@ -544,7 +550,7 @@ body {
     border-right-color: transparent !important;
   }
 }
-.active:after {
+.active.template-hubButton:after {
   content: ' ';
   position: absolute;
   margin: 0 auto;
@@ -572,6 +578,9 @@ body {
 .template-pageIndicator .pageIndicator-layoutRoot {
   -ms-grid-column: 3;
   display: inline-flex;
+}
+.template-pageIndicator .pageIndicator-layoutRoot a {
+  margin: 0;
 }
 .template-pageIndicator .pageIndicator-layoutRoot button {
   margin: 0;
